[package]
name = "idk"
version = "0.1.0"
authors = ["connor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"

[dependencies.sdl2]
version = "0.34.5"
features = ["image", "ttf"]